fixed catalog items spacing with grid

--- a/css/components/body.css
+++ b/css/components/body.css
@@ -5,15 +5,20 @@ main {
 
 .card {
     display:flex;
-    flex-direction: column; 
-}
+    flex-direction: column;
+    align-items: center;
+    }
 
 .cardlist {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 160px);
+    gap: 30px;
+    justify-content: center;
     height: 100%;
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    gap: 20px;
+    gap: 20px; */
     padding: 15px;
 }
 
@@ -155,6 +160,13 @@ main {
       .pvp {
         padding: 10px 0;
       }
+      .cardlist {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 160px);
+        gap: 30px;
+        justify-content: center;
+      }
+           
       }
 
     
